--- a/PSS/PSS/wwwroot/css/Import.css
+++ b/PSS/PSS/wwwroot/css/Import.css
@@ -16,6 +16,25 @@ h1 {
     flex-direction: column;
 }
 
+#mainDiv > .errorDiv {
+    border-radius: 4px;
+    padding: 4px;
+    background-color: rgba(255, 0, 0, 0.12);
+}
+
+#mainDiv .listItem {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 7px;
+    margin-bottom: 7px;
+    min-height: 60px;
+}
+
+#mainDiv > .listItem {
+    margin-left: 7px;
+}
+
 #mainDiv .listItem > .checkbox {
     user-select: none;
     opacity: 0;
@@ -25,19 +44,6 @@ h1 {
 
 #mainDiv .listItem > .checkbox:hover {
     cursor: pointer;
-}
-
-#mainDiv .listItem > .filename {
-    cursor: default;
-}
-
-#mainDiv .listItem > .editBtn {
-    display: none;
-    transition: 0.15s;
-}
-
-#mainDiv .listItem:hover > .editBtn {
-    display: inline;
 }
 
 #mainDiv .listItem > .checked {
@@ -54,22 +60,8 @@ h1 {
     opacity: 1;
 }
 
-#mainDiv > .errorDiv {
-    border-radius: 4px;
-    padding: 4px;
-    background-color: rgba(255, 0, 0, 0.12);
-}
-
-#mainDiv .listItem {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin-top: 7px;
-    margin-bottom: 7px;
-}
-
-#mainDiv > .listItem {
-    margin-left: 7px;
+#mainDiv .listItem > .filename {
+    cursor: default;
 }
 
 #mainDiv img {
@@ -94,4 +86,13 @@ h1 {
 #mainDiv > .listItem > .filename {
     color: green;
     margin-right: 10px;
+}
+
+#mainDiv .listItem > .editBtn {
+    display: none;
+    transition: 0.15s;
+}
+
+#mainDiv .listItem:hover > .editBtn {
+    display: inline;
 }
