Add delete button in header

--- a/PSS/PSS/wwwroot/css/Import.css
+++ b/PSS/PSS/wwwroot/css/Import.css
@@ -37,6 +37,14 @@ header > #headerMsg {
     left: 180px;
 }
 
+header > #buttons {
+    position: absolute;
+    right: 20px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
 #mainDiv {
     margin-left: var(--left-margin);
     position: absolute;
