--- a/PSS/PSS/Pages/Import.razor
+++ b/PSS/PSS/Pages/Import.razor
@@ -19,6 +19,10 @@
 		<span style="visibility: @(selectedItems.Count > 0 ? "visible" : "hidden")">@selectedItems.Count&nbsp;&nbsp;Selected</span>
 
 		<span style="visibility: @(String.IsNullOrWhiteSpace(headerMsg) ? "hidden" : "visible")" id="headerMsg">@headerMsg</span>
+		
+		<div id="buttons" style="visibility: @(selectedItems.Count > 0 ? "visible" : "hidden")">
+			<button class="iconBtn" @onclick="@DeleteSelected"><svg width="24px" height="24px" class="material-icons" viewBox="0 0 24 24"><path d="M15 4V3H9v1H4v2h1v13c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V6h1V4h-5zm2 15H7V6h10v13zM9 8h2v9H9zm4 0h2v9h-2z"></path></svg></button>
+		</div>
 	</header>
 	
 	<div id="mainDiv" style="top: @(!String.IsNullOrWhiteSpace(headerMsg) || selectedItems.Count > 0 ? 60 : 0)px">
@@ -105,6 +109,7 @@
 
 	private void PrepareData()
 	{
+		errorAmount = 0;
 		List<ImportFile> errors = new(), good = new();
 
 		importFiles = importFiles.OrderBy(file => file.originalFilename).ToList();
@@ -212,4 +217,16 @@
 		selectedItems.Clear();
 	}
 	#endregion
+	
+	private async void DeleteSelected()
+	{
+		foreach (ImportFile file in importFiles.Where(file => selectedItems.Contains(file.uuid)).ToList())
+		{
+			File.Delete(file.absolutePath);
+			importFiles.RemoveAll(f => selectedItems.Contains(f.uuid));
+		}
+		await ClearChecks();
+		PrepareData();
+		StateHasChanged();
+	}
 }
