--- a/PSS/PSS/Pages/Import.razor
+++ b/PSS/PSS/Pages/Import.razor
@@ -1,4 +1,5 @@
 @page "/"
+@using Microsoft.VisualBasic.FileIO
 @inject IJSRuntime JSRuntime
 
 <title>Import - PSS</title>
@@ -63,11 +64,6 @@
 			}
 		}
 	</div>
-
-	if (errorAmount > 0)
-		return;
-	
-	<span>shouldn't see me</span>
 }
 
 @code {
@@ -223,7 +219,7 @@
 	{
 		foreach (ImportFile file in importFiles.Where(file => selectedItems.Contains(file.uuid)).ToList())
 		{
-			File.Delete(file.absolutePath);
+			FileSystem.DeleteFile(file.absolutePath, UIOption.OnlyErrorDialogs, RecycleOption.SendToRecycleBin);
 			importFiles.RemoveAll(f => selectedItems.Contains(f.uuid));
 		}
 		await ClearChecks();
