Add CtrlA to KeyboardShortcuts.razor

--- a/PSS/PSS/Shared/KeyboardShortcuts.razor
+++ b/PSS/PSS/Shared/KeyboardShortcuts.razor
@@ -23,6 +23,9 @@
 	public Action Right { get; set; }
 
 	[Parameter]
+	public Action CtrlA { get; set; }
+
+	[Parameter]
 	public Action CtrlD { get; set; }
 
 	[Parameter]
@@ -66,6 +69,7 @@
 		if (Esc != null) HotKeysContext.Add(ModKeys.None, Keys.ESC, Esc);
 		if (Left != null) HotKeysContext.Add(ModKeys.None, Keys.Left, Left);
 		if (Right != null) HotKeysContext.Add(ModKeys.None, Keys.Right, Right);
+		if (CtrlA != null) HotKeysContext.Add(ModKeys.Ctrl, Keys.A, CtrlA);
 		if (CtrlD != null) HotKeysContext.Add(ModKeys.Ctrl, Keys.D, CtrlD);
 		if (CtrlE != null) HotKeysContext.Add(ModKeys.Ctrl, Keys.E, CtrlE);
 		if (CtrlG != null) HotKeysContext.Add(ModKeys.Ctrl, Keys.G, CtrlG);
