--- a/PSS/PSS/wwwroot/css/components/ListItem.css
+++ b/PSS/PSS/wwwroot/css/components/ListItem.css
@@ -66,3 +66,28 @@
     color: black;
     margin-left: 10px;
 }
+
+.listItem > .dateTakenDisplay {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.listItem > .dateTakenDisplay > span {
+}
+
+.listItem > select {
+    margin-left: 10px;
+    background-color: black;
+    border: 1px solid white;
+    border-radius: 4px;
+    outline: none;
+}
+
+.listItem > select:active, .listItem > select:focus {
+    outline: 2px solid dodgerblue;
+}
+
+.listItem > select > option {
+
+}
